# crim-api

./: .env.template  Cargo.toml  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
src/: TEST.rest  main.rs
src/db/: mongo.rs
src/generics/: mod.rs  structs.rs  utils.rs
src/routes/: mod.rs
src/routes/auth/: change_password.rs  create.rs  delete.rs  get.rs  login.rs  mod.rs  update.rs
src/routes/message/: make.rs  mod.rs  recieve.rs  send.rs
src/routes/ws/: add_friend_ws.rs  make_convo_ws.rs  mod.rs  recieve_message_ws.rs  recieve_ws.rs  register_ws.rs  remove_friend_ws.rs  send_ws.rs  ws.rs
src/structs/: mod.rs  structs.rs
