[package]
name = "crim-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
cargo-watch = "8.5.2"
dotenv = "0.15.0"
full = "0.1.0"
futures = "0.3.30"
getrandom = "0.2.12"
hex = "0.4.3"
openssl = "0.10.64"
rand = "0.8.5"
rust-argon2 = "2.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
took = "0.1.2"
took-macro = "0.1.1"

[dependencies.mongodb]
version = "2.8.1"
