[package]
name = "crim-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
axum = {version = "0.7.4", features = ["ws", "macros"] } 
axum-extra = { version = "0.9.2", features = ["typed-header"] }
cargo-watch = "8.5.2"
cbc = "0.1.2"
dotenv = "0.15.0"
full = "0.1.0"
futures = "0.3.30"
futures-util = "0.3.30"
getrandom = "0.2.12"
headers = "0.4.0"
hex = "0.4.3"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["pem"] }
rust-argon2 = "2.1.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = "0.1.15"
took = "0.1.2"
took-macro = "0.1.1"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dependencies.mongodb]
version = "2.8.1"
